# nch-normas-cl

./: pyproject.toml
src/nch2369_25/: __init__.py  nch2369-25.py
tests/: test_nch2369_25.py
