[project]
name = "nch-normas-cl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alonsofigueroab", email = "alonso.figueroa.bustos@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
